fix height issue on mobile

--- a/assets/css/modules/_security-center.scss
+++ b/assets/css/modules/_security-center.scss
@@ -154,6 +154,7 @@
   .security-center-ui {
     ul {
       flex-direction: column;
+      height: auto;
     }
     .level-header {
       width: 100%;
